--- a/quartz/components/styles/graph.scss
+++ b/quartz/components/styles/graph.scss
@@ -26,7 +26,7 @@
       top: 0;
       right: 0;
       border-radius: 4px;
-      background-color: var(--light);
+      background-color: transparent;
       transition: background-color 0.5s ease;
       cursor: pointer;
       &:hover {
