removed dotted background from footnotes

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -238,6 +238,7 @@ a {
 .footnotes {
   margin-top: 2rem;
   border-top: 1px solid var(--lightgray);
+  background-color: var(--light);
 }
 
 input[type="checkbox"] {
