--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -238,7 +238,7 @@ a {
 .footnotes {
   margin-top: 2rem;
   border-top: 1px solid var(--lightgray);
-  background-color: var(--light);
+  background-image: none;
 }
 
 input[type="checkbox"] {
